--- a/src/chrome/komodo/skin/plat/mac/platform.less
+++ b/src/chrome/komodo/skin/plat/mac/platform.less
@@ -129,9 +129,3 @@ scintilla {
 	font-size: 8pt !important;
     }
 }
-
-view[type="minimap"]
-{
-    padding-left: 0;
-    margin-left: -1px;
-}
